[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_spicy_networking = { git = "https://github.com/schmidtadrian/bevy_spicy_networking.git", branch = "master" }
serde = { version = "1.0.125", features = ["derive"] }
typetag = "0.2.0"
shared = { path = "../shared" }
rand = "0.8"